Fix the mobile-layout bug

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -2,4 +2,6 @@
   width: 100%;
   background-color: var(--bgGray);
   overflow-x: hidden;
+  position: relative;
+  max-width: 100vw;
 }
